--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,3 +2,11 @@
     <img src="telary.svg" alt="Telary Logo">
     <span class="tagline">Data made Agile</span>
 </header>
+
+<nav>
+    <ul>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/references">References</a></li>
+        <li><a href="/technologies">Technologies</a></li>
+    </ul>
+</nav>
