Adding reference page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,15 @@
 <header>
-    <img src="telary.svg" alt="Telary Logo">
-    <span class="tagline">Data made Agile</span>
+    <a href="index.html">
+        <img src="telary.svg" alt="Telary Logo">
+        <span class="tagline">Data made Agile</span>
+    </a>
 </header>
 
 <nav>
     <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="/blog">Blog</a></li>
-        <li><a href="/references">References</a></li>
+        <li><a href="/references.html">References</a></li>
         <li><a href="/technologies">Technologies</a></li>
     </ul>
 </nav>
