--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,11 @@
 
 <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <li><a href="{{ '/' | relative_url }}">Home</a></li>
+        <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
+        <li><a href="{{ '/tags/' | relative_url }}">Tags</a></li>
+        <li><a href="{{ '/latest/' | relative_url }}">Latest Posts</a></li>
+        <li><a href="{{ '/featured/' | relative_url }}">Featured Posts</a></li>
         <li><a href="/references.html">References</a></li>
         <li><a href="/technologies">Technologies</a></li>
     </ul>
