--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,9 @@
             <h1>{{ page.title }}</h1>
             <p>{{ page.date | date: "%B %d, %Y" }}</p>
             <div>
+                {% raw %}
                 {{ content }}
+                {% endraw %}
             </div>
         </article>
     </main>
