--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
-    <a href="index.html">
-        <img src="telary.svg" alt="Telary Logo">
+    <a href="/index.html">
+        <img src="/telary.svg" alt="Telary Logo">
         <span class="tagline">Data made Agile</span>
     </a>
 </header>
