--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
-</head>
+{% include head.html %}
 
 <body>
     {% include header.html %}
-    <main>
-        <article>
+
+    <main class="content-container" style="display: flex;">
+
+        <!-- Article Section -->
+        <article style="flex: 3;">
             <h1>{{ page.title }}</h1>
             <p>{{ page.date | date: "%B %d, %Y" }}</p>
             <div>
-                {% raw %}
                 {{ content }}
-                {% endraw %}
             </div>
         </article>
     </main>
+
+    {% include footer.html %}
 </body>
 
 </html>
