--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,13 +8,13 @@
     <main class="" style="display: flex;">
 
         <!-- Table of Contents Section -->
-        <nav id="toc" style="padding: 20px; border-right: 1px solid #ddd;">
+        <nav id="toc" style="margin: 0px; padding-left: 5px; border-right: 1px solid #ddd; flex: 0 0 15%;">
             <h2>Table of Contents</h2>
             <div id="toc-content"></div>
         </nav>
 
         <!-- Article Section -->
-        <article class="content-container" style="padding: 20px;">
+        <article class="content-container" style="padding: 20px; max-width: 800px; flex: 0 0 800px;">
             <h1>{{ page.title }}</h1>
             <p>{{ page.date | date: "%B %d, %Y" }}</p>
             <div>
