--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="{{ '/' | relative_url }}">Home</a></li>
         <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
-        <li><a href="/technologies">Technologies</a></li>
+        <li><a href="/technologies.html">Technologies</a></li>
+        <li><a href="/references.html">References</a></li>
     </ul>
 </nav>
