--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 <nav>
     <ul>
         <li><a href="{{ '/' | relative_url }}">Home</a></li>
-        <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
+        <li><a href="/blog.html">Blog</a></li>
         <li><a href="/technologies.html">Technologies</a></li>
         <li><a href="/references.html">References</a></li>
     </ul>
