--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,4 +3,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ site.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
 </head>
