Adding projects examples

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,9 @@
 <nav>
     <ul>
         <li><a href="{{ '/' | relative_url }}">Home</a></li>
-        <li><a href="/blog.html">Blog</a></li>
-        <li><a href="/projects.html">Projects</a></li>
-        <li><a href="/technologies.html">Technologies</a></li>
-        <li><a href="/references.html">References</a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/technologies">Technologies</a></li>
+        <li><a href="/references">References</a></li>
     </ul>
 </nav>
