Adding v2 of Telary

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-{% include head.html %}
-
-<body>
-    {% include header.html %}
-    {{ content }}
-    {% include footer.html %}
-</body>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{{ site.title }}</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+    <body>
+        {% include navbar.html %}
+        {{ content }}
+        {% include footer.html %}
+    </body>
 
 </html>
