--- a/_layouts/main_page.html
+++ b/_layouts/main_page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ site.title }}</title>
+    <link rel="icon" href="{{ '/assets/img/favicon.png' | relative_url }}" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
