Adding blog on the website

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
         <div class="hidden md:block">
           <nav aria-label="Global">
             <ul class="flex items-center gap-6 text-sm">
-              <li>
+              <!--<li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
                   href="#"
@@ -26,18 +26,18 @@
                 >
                   Careers
                 </a>
-              </li>
+              </li>-->
   
               <li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                  href="#"
+                  href="/details"
                 >
                   Pricing
                 </a>
               </li>
   
-              <li>
+              <!--<li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
                   href="#"
@@ -53,12 +53,12 @@
                 >
                   Projects
                 </a>
-              </li>
+              </li>-->
   
               <li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                  href="#"
+                  href="/blog"
                 >
                   Blog
                 </a>
