--- a/_layouts/main_page.html
+++ b/_layouts/main_page.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ site.title }}</title>
-    <link rel="icon" href="{{ '/assets/img/favicon.png' | relative_url }}" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="{{ '/assets/img/favicon.png' | relative_url }}" type="image/png" />
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         const scrollToAnchor = (event) => {
@@ -25,6 +25,7 @@
     </script>
   </head>
     <body>
+        {% include navbar.html %}
         {{ content }}
         {% include footer.html %}
     </body>
