--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ site.title }}</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-    <body>
-        {% include navbar.html %}
-        {{ content }}
-        {% include footer.html %}
-    </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{{ site.title }}</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="{{ '/assets/css/patterns.css' | relative_url }}" />
+</head>
+
+<body>
+  {% include navbar.html %}
+  {{ content }}
+  {% include footer.html %}
+</body>
 
 </html>
