Improving landing page

--- a/_includes/hero/pricing.html
+++ b/_includes/hero/pricing.html
@@ -44,6 +44,7 @@
       </p>
       <ul class="text-left space-y-2 text-gray-700 mt-2">
         <li>✔️ Tout "Scaleup"</li>
+        <li>✔️ Déploiement OnPrem possible</li>
         <hr class="border-purple-700">
         <li>✔️ AI / ML</li>
         <li>✔️ Développements personnalisés</li>
