Adding ogsite and made in france message

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer class="text-center text-gray-500 text-sm py-6">
-    Telary | Data Platform as a Service
-  </footer>
+  Telary | 🇫🇷 Data Platform as a Service
+</footer>
 </body>
+
 </html>
