--- a/_layouts/main_page.html
+++ b/_layouts/main_page.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="{{ '/assets/img/favicon.png' | relative_url }}" type="image/png" />
   <link rel="stylesheet" href="{{ '/assets/css/patterns.css' | relative_url }}" />
 
-  <meta property="og:image" content="{{ '/assets/img/ogsite.png' | relative_url }}" />
+  <meta property="og:image" content="{{ '/assets/img/ogsite.png' | absolute_url }}" />
   <meta property="og:title" content="{{ site.title }}" />
   <meta property="og:description" content="{{ site.description }}" />
   <meta property="og:image:width" content="1200" />
