Adding analytics to telary

--- a/_layouts/main_page.html
+++ b/_layouts/main_page.html
@@ -15,6 +15,9 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
+  <script src="https://beamanalytics.b-cdn.net/beam.min.js" data-token="65f5dcd8-b94c-4d82-aa34-6bc36f99c13f" async>
+  </script>
+
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const scrollToAnchor = (event) => {
