--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
   <title>{{ site.title }}</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="{{ '/assets/css/patterns.css' | relative_url }}" />
+  <script src="https://beamanalytics.b-cdn.net/beam.min.js" data-token="65f5dcd8-b94c-4d82-aa34-6bc36f99c13f" async>
+  </script>
 </head>
 
 <body>
