--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,16 +1,16 @@
 <header class="bg-white dark:bg-gray-900">
-    <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
-      <div class="flex h-16 items-center justify-between">
-        <div class="md:flex md:items-center md:gap-12">
-          <a class="block" href="/">
-            <img src="/telary.svg" alt="Telary Logo" class="h-8">
-          </a>
-        </div>
-  
-        <div class="hidden md:block">
-          <nav aria-label="Global">
-            <ul class="flex items-center gap-6 text-sm">
-              <!--<li>
+  <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
+    <div class="flex h-16 items-center justify-between">
+      <div class="md:flex md:items-center md:gap-12">
+        <a class="block" href="/">
+          <img src="/telary.svg" alt="Telary Logo" class="h-8">
+        </a>
+      </div>
+
+      <div class="hidden md:block">
+        <nav aria-label="Global">
+          <ul class="flex items-center gap-6 text-sm">
+            <!--<li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
                   href="#"
@@ -27,17 +27,15 @@
                   Careers
                 </a>
               </li>-->
-  
-              <li>
-                <a
-                  class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                  href="/details"
-                >
-                  Pricing
-                </a>
-              </li>
-  
-              <!--<li>
+
+            <li>
+              <a class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="/details">
+                Pricing
+              </a>
+            </li>
+
+            <!--<li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
                   href="#"
@@ -54,20 +52,21 @@
                   Projects
                 </a>
               </li>-->
-  
-              <li>
-                <a
-                  class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                  href="/blog"
-                >
-                  Blog
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-  
-        
+
+            <li>
+              <a class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                href="/blog">
+                Blog
+              </a>
+            </li>
+            <li class="text-gray-500">
+              {% include language-switcher.html %}
+            </li>
+          </ul>
+        </nav>
       </div>
+
+
     </div>
-  </header>
+  </div>
+</header>
