Adding advanced to ai/ml

--- a/_includes/hero/pricing_en.html
+++ b/_includes/hero/pricing_en.html
@@ -46,7 +46,7 @@
                 <li>✔️ Everything in "Scaleup"</li>
                 <li>✔️ OnPrem deployment possible</li>
                 <hr class="border-purple-700">
-                <li>✔️ AI / ML</li>
+                <li>✔️ Advanced AI / ML</li>
                 <li>✔️ Custom development</li>
                 <hr class="border-purple-700">
                 <li>✔️ 7/7 Support</li>
