--- a/_includes/hero/pricing_fr.html
+++ b/_includes/hero/pricing_fr.html
@@ -46,7 +46,7 @@
         <li>✔️ Tout "Scaleup"</li>
         <li>✔️ Déploiement OnPrem possible</li>
         <hr class="border-purple-700">
-        <li>✔️ AI / ML</li>
+        <li>✔️ AI / ML avancé</li>
         <li>✔️ Développements personnalisés</li>
         <hr class="border-purple-700">
         <li>✔️ Support 7/7</li>
