--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,19 @@
     <link rel="stylesheet" href="/assets/css/style_blog.css">
     <script src="https://beamanalytics.b-cdn.net/beam.min.js" data-token="65f5dcd8-b94c-4d82-aa34-6bc36f99c13f" async>
     </script>
+    <style>
+    .text-purple-700 {
+      color: #5238a4ff !important;
+    }
 
+    .bg-purple-700 {
+      background-color: #5238a4ff !important;
+    }
+
+    .border-purple-700 {
+      border-color: #5238a4ff !important;
+    }
+    </style>
 </head>
 
 <body>
@@ -18,21 +30,24 @@
     <header class="bg-purple-700 text-white py-6 text-center">
         <h1 class="text-4xl font-bold">{{page.title}}</h1>
     </header>
-    <main class="" style="display: flex;">
+    <main class="main-content-wrapper">
+        <div class="content-with-toc">
+            <!-- Article Section -->
+            <article class="content-container">
+                <p class="article-date">{{ page.date | date: "%B %d, %Y" }}</p>
+                <div class="">
+                    {{ content }}
+                </div>
+            </article>
 
-        <!-- Table of Contents Section -->
-        <nav id="toc" style="margin: 0px; padding-left: 5px; border-right: 1px solid #ddd; flex: 0 0 15%;">
-            <h2>Table of Contents</h2>
-            <div id="toc-content"></div>
-        </nav>
-
-        <!-- Article Section -->
-        <article class="content-container" style="padding: 20px; max-width: 800px; flex: 0 0 800px;">
-            <p>{{ page.date | date: "%B %d, %Y" }}</p>
-            <div class="">
-                {{ content }}
-            </div>
-        </article>
+            <!-- Table of Contents Section - Right Side -->
+            <aside class="toc-wrapper">
+                <nav id="toc" class="toc-sticky">
+                    <h2 class="toc-title">Contents</h2>
+                    <div id="toc-content"></div>
+                </nav>
+            </aside>
+        </div>
     </main>
 
 
