Improving landing page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,16 +10,16 @@
       <div class="hidden md:block">
         <nav aria-label="Global">
           <ul class="flex items-center gap-6 text-sm">
-            <!--<li>
+              <li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                  href="#"
+                  href="/manifesto"
                 >
-                  About
+                  Manifesto
                 </a>
               </li>
   
-              <li>
+              <!--<li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
                   href="#"
