Adding our solution page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -35,15 +35,15 @@
               </a>
             </li>
 
-            <!--<li>
+            <li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                  href="#"
+                  href="/our-solution"
                 >
-                  Services
+                  Our solution
                 </a>
               </li>
-  
+  <!--
               <li>
                 <a
                   class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
